samples/_failures_safe/1761369279_6c2ab5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bdeed9ad.c: In function ‘main’:
./samples/SAFE/__tmp_bdeed9ad.c:138:40: error: ‘matrix’ undeclared (first use in this function); did you mean ‘matrix2’?
  138 |             input_matrix(rows2, cols2, matrix
      |                                        ^~~~~~
      |                                        matrix2
./samples/SAFE/__tmp_bdeed9ad.c:138:40: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_bdeed9ad.c:138:46: error: expected ‘)’ at end of input
  138 |             input_matrix(rows2, cols2, matrix
      |                         ~                    ^
      |                                              )
./samples/SAFE/__tmp_bdeed9ad.c:138:13: error: expected declaration or statement at end of input
  138 |             input_matrix(rows2, cols2, matrix
      |             ^~~~~~~~~~~~
./samples/SAFE/__tmp_bdeed9ad.c:138:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bdeed9ad.c:138:13: error: expected declaration or statement at end of input
